tests/parser/command_form/test_01.m.out
In test_01.m, line 10
|     foo kitten; % kitten
|         ^^^^^^ error: expected NEWLINE, found IDENTIFIER instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
